--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
     <h2 class="sec-title">About <em>Me</em></h2>
     <div class="about-grid">
       <div class="about-text fade-up">
-        <p>I am an Industrial Engineer with 4 years of hands-on experience transforming manufacturing and operational processes through disciplined use of data. My work sits at the intersection of classical engineering methods and modern analytics, combining Lean Manufacturing, Six Sigma, and process design with <strong>Python, SQL, and Power BI</strong> to deliver improvements that are both measurable and sustainable.</p>
-        <p>My career has spanned Italy, from custom industrial equipment manufacturing to operational excellence in production environments, and more recently advanced data science studies in South Korea. I bring an international perspective and a deep respect for shop-floor realities, because the best improvements are always built collaboratively.</p>
-        <p>I am now based in Palm Beach Gardens, FL, and actively seeking roles in <strong>Industrial Engineering</strong>, <strong>Data Science</strong>, or <strong>Continuous Improvement</strong>. US Permanent Resident, fluent in English and Italian, and ready to contribute from day one.</p>
+        <p>I am an Engineer with 4 years of hands-on experience transforming manufacturing and operational processes through disciplined use of data. My work sits at the intersection of classical engineering methods and modern analytics, combining <strong>Lean Manufacturing, Six Sigma</strong>, and process design with <strong>Python, SQL, and Power BI</strong> to deliver improvements that are both measurable and sustainable.</p>
+        <p>My professional evolution has taken me from designing custom industrial equipment to spearheading continuous improvement initiatives in complex production environments. By integrating my background in mechanical engineering with advanced analytical tools, I translate complex data into practical solutions that respect shop-floor realities.</p>
+        <p>I am now based in Palm Beach Gardens, FL, and actively seeking roles in <strong>Industrial Engineering</strong>, <strong>Data Science</strong>, or <strong>Continuous Improvement</strong>. I am a US Permanent Resident, fluent in English and Italian, and ready to contribute from day one.</p>
       </div>
       <div class="about-stats">
         <div class="stat-box fade-up">
