--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
 <!-- REFERENCES -->
 <section id="references">
-  <div class="section-bg ref-bg" ></div>
+  <div class="section-bg ref-bg" style="background-image: url('wrenches.jpg')"></div>
   <div class="container">
     <p class="sec-label">What Others Say</p>
     <h2 class="sec-title-light">References and <em>Endorsements</em></h2>
@@ -444,4 +444,5 @@
 </body>
 
 </html>
+
 
