--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .hero-bg { filter:grayscale(100%) brightness(0.45) contrast(1.05); }
     .hero-bg::after { content:""; position:absolute; inset:0; background:linear-gradient(to top, rgba(15,23,42,1) 0%, rgba(15,23,42,0.72) 45%, rgba(15,23,42,0.15) 100%); }
     .sec-bg { filter:grayscale(100%) brightness(0.85) contrast(0.9); opacity:0.25; }
-    .ref-bg { filter:grayscale(100%) brightness(0.85) contrast(0.9); opacity:0.25; }
+    .ref-bg { filter: brightness(0.7) contrast(1.1); opacity: 0.55; }
     .ref-bg::after { content:""; position:absolute; inset:0; background:rgba(15,23,42,0.72); }
 
     /* HERO */
@@ -444,6 +444,7 @@
 </body>
 
 </html>
+
 
 
 
