--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
     /* RESPONSIVE */
     @media (max-width:900px) {
       nav { padding:1rem 1.5rem; }
-      .nav-links { gap:1.5rem; }
-      .hero { padding:0 1.5rem 5rem; }
+      .nav-links { gap:1rem; }
+      .nav-links a { font-size:0.6rem; }
+      .hero { padding:7rem 1.5rem 5rem; }
       .hero-content { grid-template-columns:1fr; gap:3rem; }
       .hero-right { border-left:none; padding-left:0; border-top:1px solid rgba(255,255,255,0.08); padding-top:2rem; }
       .about-grid, .resume-grid { grid-template-columns:1fr; }
