Fix background position for mobile optimization

--- a/index.html
+++ b/index.html
@@ -129,24 +129,24 @@
   .ref-grid { grid-template-columns:1fr; }
   .container { padding:0 1.5rem; }
 
-  /* Background images ottimizzati per mobile */
+  /* Background images optimized for mobile */
   .section-bg {
     background-attachment: scroll;
     background-size: cover;
   }
   .hero-bg {
-    background-position: 30% center;
+    background-position: left center;
   }
   #about .sec-bg {
-    background-position: center center;
+    background-position: left center;
     opacity: 0.15;
   }
   #resume .sec-bg {
-    background-position: center top;
+    background-position: left center;
     opacity: 0.15;
   }
   #references .section-bg {
-    background-position: center center;
+    background-position: left center;
   }
 }
     #references {
