--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
     background-position: left center;
   }
   #about .sec-bg {
-    background-position: left center;
+    background-position: right center;
     opacity: 0.15;
   }
   #resume .sec-bg {
-    background-position: left center;
+    background-position: center center;
     opacity: 0.15;
   }
   #references .section-bg {
-    background-position: left center;
+    background-position: center center;
   }
 }
     #references {
